# appstream-glib

./: configure.ac  meson.build
client/: as-util.c
contrib/: libappstream-glib.spec.in
data/tests/: example.desktop
docs/: PORTING.md
libappstream-builder/: asb-self-test.c  meson.build
libappstream-builder/plugins/: asb-plugin-blacklist.c  asb-plugin-firmware.c  meson.build
libappstream-glib/: Makefile.am  appstream-glib-helper.h  appstream-glib-helper.pc.in  appstream-glib.h  as-app-validate.c  as-app.c  as-app.h  as-blacklist-ids.txt  as-checksum.c  as-checksum.h  as-icon.c  as-image.c  as-node.c  as-pixbuf-fake.c  as-pixbuf-gdk.c  as-pixbuf.h  as-release.c  as-release.h  as-self-test.c  as-utils-helper.c  as-utils-helper.h  as-utils.c  as-utils.h  meson.build
